--- a/_config.yml
+++ b/_config.yml
@@ -79,8 +79,14 @@ highlighter: rouge
 footer_menu: example_footer_menu
 
 collections:
-  applistings: 
-    output: true
-    layout: applist
-    image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
-    show_sidebar: false
+    applistings: 
+        output: true
+        layout: applist
+        image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
+        show_sidebar: false
+
+    umcslistings: 
+        output: true
+        layout: applist
+        image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
+        show_sidebar: false
