--- a/_config.yml
+++ b/_config.yml
@@ -91,21 +91,21 @@ collections:
         image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
         show_sidebar: false
 
-    rtelistings: 
+    rteslistings: 
         output: true
-        layout: rtelist
+        layout: rteslist
         image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
         show_sidebar: false
 
-    sysapplistings: 
+    sysappslistings: 
         output: true
-        layout: sysapplist
+        layout: sysappslist
         image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
         show_sidebar: false
 
-    gamelistings: 
+    gameslistings: 
         output: true
-        layout: gamelist
+        layout: gameslist
         image: https://preview.redd.it/vsprmxbhzaj81.png?auto=webp&s=f44361fa1cc8085a51394eeddcb72c52e4f98a05
         show_sidebar: false
 
