--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ description: >-
 baseurl: "/sas-apps-archive"
 url: "ps2wiki.github.io"
 #permalink: pretty
-#favicon: /path/to/favicon.png
+favicon: "assets/favicons/favicon.ico"
 hide_share_buttons: true
 #theme_color: '#eeeeee'
 #fixed_navbar: top
