--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ sass:
   # load_paths: 
     # - node_modules
 
-google_analytics: "G-NW7W22XNC2"
+google_analytics: "G-B0NR7Y7JCZ"
 cookie_policy: 
 
 defaults:
