--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,4 +13,5 @@
       link: /psu-categories/games.html 
     - name: Other
       link: /psu-categories/other.html
-    
+- name: What is SAS?
+  link: https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/index.html
