--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,4 +16,4 @@
 - name: Documentation
   link: https://ps2wiki.github.io/documentation/homebrew/PS2-App-System/SAS/index.html
 - name: Installation
-  link: https://ps2wiki.github.io/ps2-app-system/sas/2024/12/13/how-to-install-app-psus/html
+  link: https://ps2wiki.github.io/ps2-app-system/sas/2024/12/13/how-to-install-app-psus.html
